[gd_scene load_steps=15 format=4 uid="uid://djlh5o56djjv7"]

[ext_resource type="Script" uid="uid://dmfgw1fj4omij" path="res://Scripts/player2.0.gd" id="1_bmxlf"]
[ext_resource type="Script" uid="uid://cepjtkbnyrclx" path="res://Scripts/ray_cast_2d.gd" id="2_4kpch"]
[ext_resource type="Texture2D" uid="uid://d2pxr3hrkg22p" path="res://icon.svg" id="3_grg3l"]
[ext_resource type="Script" uid="uid://dc76flya2x05q" path="res://Scripts/sprite_2d.gd" id="4_frkhe"]
[ext_resource type="Script" uid="uid://dpame8mpnbvc7" path="res://Scripts/trick_manager.gd" id="5_1p5hy"]
[ext_resource type="Script" uid="uid://caqxw8whdwn1e" path="res://Scripts/LandingManager.gd" id="6_h1m7h"]
[ext_resource type="Script" uid="uid://cpgaqwirgaq8f" path="res://Scripts/jump_timing_feedback.gd" id="8_2w5on"]
[ext_resource type="Texture2D" uid="uid://dh7g5mqmvkqfg" path="res://simple_tileset.png" id="9_346fj"]
[ext_resource type="Script" uid="uid://5o45gfr8yhik" path="res://Scripts/killzone.gd" id="10_0sclb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uu6xs"]
radius = 7.95456

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_r0du0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cm0pq"]
texture = ExtResource("9_346fj")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_fos0i"]
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_r0du0")
sources/0 = SubResource("TileSetAtlasSource_cm0pq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fos0i"]
size = Vector2(2814.5, 60)

[node name="Main" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(576, 482)
script = ExtResource("1_bmxlf")

[node name="RayCast2D" type="RayCast2D" parent="Player"]
target_position = Vector2(0, 70)
script = ExtResource("2_4kpch")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_grg3l")
script = ExtResource("4_frkhe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_uu6xs")

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true

[node name="TrickManager" type="Node2D" parent="Player"]
script = ExtResource("5_1p5hy")

[node name="LandingManager" type="Node2D" parent="Player"]
script = ExtResource("6_h1m7h")

[node name="JumpTimingFeedback" type="Label" parent="." groups=["feedback_label"]]
offset_left = 593.0
offset_top = 551.0
offset_right = 711.0
offset_bottom = 574.0
pivot_offset = Vector2(58, 12)
text = "jump_feedback"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_2w5on")

[node name="FeedbackTimer" type="Timer" parent="JumpTimingFeedback"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAqACQAAAAAAAAAAAAqACUAAAAAAAEAAAArACQAAAABAAAAAAArACUAAAABAAEAAAApACQAAAABAAAAAAApACUAAAABAAEAAAAeACQAAAAAAAAAAAAeACUAAAAAAAEAAAAcACQAAAAAAAAAAAAdACQAAAABAAAAAAAdACUAAAABAAEAAAAcACUAAAAAAAEAAAAfACQAAAABAAAAAAAgACQAAAAAAAAAAAAhACQAAAABAAAAAAAiACQAAAAAAAAAAAAjACQAAAABAAAAAAAkACQAAAAAAAAAAAAlACQAAAABAAAAAAAmACQAAAAAAAAAAAAnACQAAAABAAAAAAAoACQAAAAAAAAAAAAoACUAAAAAAAEAAAAnACUAAAABAAEAAAAmACUAAAAAAAEAAAAlACUAAAABAAEAAAAkACUAAAAAAAEAAAAjACUAAAABAAEAAAAiACUAAAAAAAEAAAAhACUAAAABAAEAAAAgACUAAAAAAAEAAAAfACUAAAABAAEAAAA=")
tile_set = SubResource("TileSet_fos0i")

[node name="KillZone" type="Area2D" parent="."]
position = Vector2(-445, 0)
script = ExtResource("10_0sclb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(1020.75, 863)
shape = SubResource("RectangleShape2D_fos0i")

[connection signal="jumped" from="Player" to="JumpTimingFeedback" method="_on_player_jumped"]
[connection signal="landing_processed" from="Player/LandingManager" to="JumpTimingFeedback" method="_on_landing_processed"]
[connection signal="timeout" from="JumpTimingFeedback/FeedbackTimer" to="JumpTimingFeedback" method="_on_feedback_timer_timeout"]
